# OpenGL_Projects

./: .gitignore  CMakeLists.txt  README.md  build.sh
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
helpers/: ShaderUtil.cpp  ShaderUtil.hpp  stringReader.cpp  stringReader.hpp
shaders/: Cube.frag  Cube.vert  MandelBrot.frag  MandelBrot.vert  RayMarching.frag  RayMarching.vert  ShaderArt.frag  ShaderArt.vert  ShapeIWant.frag  Shapes.frag  Shapes.vert  TriangleVertex.frag  TriangleVertex.glsl  TriangleVertex.vert
shaders/ShapingFunctions/: StarightLine.frag
src/: main.cpp
src/Going3D/: Cube.cpp  Cube.hpp
src/HelloWindow/: HelloWindow.cpp  HelloWindow.hpp
src/MandelBrot/: MandelBrot.cpp  MandelBrot.hpp
src/Shapes/: RayMarching.cpp  Shapes.cpp  Shapes.hpp  algorithmic_drawing.cpp  algorithmic_drawing.hpp
src/Triangle/: Triangle.cpp  Triangle.hpp
